<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/searchUserEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_user_hint"
        android:visibility="gone"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddUserToGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchUserEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_event"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_group"
        app:layout_constraintTop_toBottomOf="@id/btnCreateEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnAddUserToGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_user_to_group"
        app:layout_constraintTop_toBottomOf="@id/btnCreateGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnConfirmCreateGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_group"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/groupNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/groupNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_group_hint"
        android:inputType="text"
        android:visibility="gone"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddUserToGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnAddUserToGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/eventDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_date_button_hint"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/eventNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


    <EditText
        android:id="@+id/eventLocationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/event_location_hint"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/eventDateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/eventDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/event_description_hint"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/eventLocationEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/eventAccommodationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_accommodation_hint"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/eventDescriptionEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmCreateEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_create_event_button"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/eventAccommodationCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
